Bug 252590 - Fix entry tier-up SIMD check in BBQ baseline JIT
Summary: Fix entry tier-up SIMD check in BBQ baseline JIT
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebAssembly (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: David Degazio
URL:
Keywords: InRadar
Depends on:
Blocks: 252209
  Show dependency treegraph
 
Reported: 2023-02-20 11:54 PST by David Degazio
Modified: 2023-02-20 13:17 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Degazio 2023-02-20 11:54:29 PST
rdar://105689397

The OMG entry tier-up path clobbers GPRInfo::argumentGPR0 and GPRInfo::argumentGPR1, but while we will track argument locals as live currently, we don't actively spill to preserve them across the call in the new BBQ baseline JIT, only at the end of the current basic block. We also don't pass whether the current function is a SIMD function to the tier-up thunk generator.
Comment 1 David Degazio 2023-02-20 12:32:07 PST
Looks like Yusuke beat me to the punch on the clobbers...I'll adapt this bug to track specifically the SIMD parameter.
Comment 2 David Degazio 2023-02-20 12:33:09 PST
(fixing the argument register clobbering is tracked in https://bugs.webkit.org/show_bug.cgi?id=252591)
Comment 3 David Degazio 2023-02-20 12:40:12 PST
Pull request: https://github.com/WebKit/WebKit/pull/10383
Comment 4 EWS 2023-02-20 13:17:06 PST
Committed 260562@main (f6adb7641317): <https://commits.webkit.org/260562@main>

Reviewed commits have been landed. Closing PR #10383 and removing active labels.