Fix entry tier-up SIMD check in BBQ baseline JIT https://bugs.webkit.org/show_bug.cgi?id=252590 rdar://105689397

Currently, the new WebAssembly BBQ baseline JIT always passes false for the isSIMD
parameter when calling into the OMG tier-up trigger thunk. This patch makes it so
we track whether the function is a SIMD function using notifyFunctionUsesSIMD(),
and pass that into the thunk generator, ensuring we preserve any SIMD registers
used to pass arguments to the function.

Reviewed by Yusuke Suzuki.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJIT::emitEntryTierUpCheck):
(JSC::Wasm::BBQJIT::notifyFunctionUsesSIMD):

Canonical link: https://commits.webkit.org/260562@main